[package]
name = "vdl"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3 
lto = "fat"
strip = true

[dependencies]
basic-toml = "0.1.9"
clap = { version = "4.5.31", features = ["derive"] }
dirs = "6.0.0"
eyre = "0.6.12"
indicatif = "0.17.11"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
signal-hook = "0.3.17"
